[gd_scene load_steps=3 format=2]

[ext_resource path="res://objects/battle/projectiles/jevil/projCarousel.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/battle/attacks/jevil/attack5/jevil_attack5.gd" type="Script" id=2]

[node name="jevil_attack5" type="Node2D"]
script = ExtResource( 2 )

[node name="row0" type="Node2D" parent="."]
position = Vector2( -40, 0 )

[node name="projCarousel0" parent="row0" instance=ExtResource( 1 )]
position = Vector2( 0, -25 )

[node name="projCarousel1" parent="row0" instance=ExtResource( 1 )]

[node name="projCarousel2" parent="row0" instance=ExtResource( 1 )]
position = Vector2( 0, 25 )

[node name="row1" type="Node2D" parent="."]

[node name="projCarousel0" parent="row1" instance=ExtResource( 1 )]
position = Vector2( 0, -25 )
visisbleType = 1

[node name="projCarousel1" parent="row1" instance=ExtResource( 1 )]

[node name="projCarousel2" parent="row1" instance=ExtResource( 1 )]
position = Vector2( 0, 25 )

[node name="row2" type="Node2D" parent="."]
position = Vector2( 40, 0 )

[node name="projCarousel0" parent="row2" instance=ExtResource( 1 )]
position = Vector2( 0, -25 )
visisbleType = 2

[node name="projCarousel1" parent="row2" instance=ExtResource( 1 )]
visisbleType = 2

[node name="projCarousel2" parent="row2" instance=ExtResource( 1 )]
position = Vector2( 0, 25 )
visisbleType = 2

[node name="row3" type="Node2D" parent="."]
position = Vector2( 40, 0 )

[node name="projCarousel0" parent="row3" instance=ExtResource( 1 )]
position = Vector2( 0, -25 )

[node name="projCarousel1" parent="row3" instance=ExtResource( 1 )]

[node name="projCarousel2" parent="row3" instance=ExtResource( 1 )]
position = Vector2( 0, 25 )
